--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h3>Headline about housing needs of O'ahu's workforce</h3>
+				<h3>The housing needs of O'ahu's workforce are not being met.</h3>
 				<h5>Jobs are everywhere, job access is important, with some types of jobs more clustered than others.</h5>
 			</div>
 		</div>
@@ -261,13 +261,34 @@
 		</div>
 
 		<div class="row">
-			<h5>Oahu's essential workforce has unmet housing needs - risk of losing</h5>
+			<h5>Many essential workers fall within the 80-140% AMI group and need housing affordable at those income levels.</h5>
 			<div class="twelve columns" style="margin-top: 2%">
 				<iframe title="" aria-label="Range Plot" id="datawrapper-chart-TDGRK" src="https://datawrapper.dwcdn.net/TDGRK/5/" scrolling="no" frameborder="0" style="border: none;" width="998" height="348" data-external="1"></iframe>
 			</div>
 			<div class="twelve columns" style="margin-top: 2%">
-				<p>The essential workforce is typically within the 60-140% AMI range depending on whether there are one or two income earners in the household. According to IRS data, the average income of Oahu’s approx. 4,000 annual outmigrant households is between 65% and 130% AMI.
+				<p>The essential workforce is typically within the 60-140% AMI range depending on whether there are one or two income earners in the household. This group is both strained enough by housing costs and mobile enough to leave the island for a lower cost of living. According to IRS data, the average income of Oahu’s approx. 4,000 annual outmigrant households is between 65% and 130% AMI.
 				</p>
+			</div>
+		</div>
+	</div>
+	<div>
+		<div class="row">
+			<h3>Thousands of middle-income households out-migrating annually.</h3>
+			<h5>Honolulu has lost more migrants than it has gained every year since 2015. Most outgoing households are middle-income, earning between 60% and 140% AMI.</h5>
+			<div class="twelve columns" style="margin-top: 2%">
+				<p>Net migration by year (households)				</p>
+				<iframe title="" aria-label="Column Chart" id="datawrapper-chart-jThFu" src="https://datawrapper.dwcdn.net/jThFu/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="384" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+				</script>
+			</div>
+			<div class="twelve columns" style="margin-top: 2%">
+				<p>Projections based on past trends suggest relatively low growth in these income groups, especially when compared to households earning above 140%. However, these projections have this out-migration trend baked in and assume they will continue. If these households did not leave the island altogether, they would drive substantial middle-income household growth. 
+					Building more housing that meets these households’ needs and ability to pay could help stem the tide of out-migration.
+				</p>
+			</div>
+			<div class="twelve columns" style="margin-top: 2%">
+				<p>Average incomes of out-migrating households (% AMI of that year)				</p>
+				<iframe title="" aria-label="Interactive line chart" id="datawrapper-chart-JDUUV" src="https://datawrapper.dwcdn.net/JDUUV/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="361" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+				</script>
 			</div>
 		</div>
 	</div>
