cleaning up divs

--- a/index.html
+++ b/index.html
@@ -270,10 +270,8 @@
 				</p>
 			</div>
 		</div>
-	</div>
-	<div>
 		<div class="row">
-			<h3>Thousands of middle-income households out-migrating annually.</h3>
+			<h3>Thousands of middle-income households are out-migrating annually.</h3>
 			<h5>Honolulu has lost more migrants than it has gained every year since 2015. Most outgoing households are middle-income, earning between 60% and 140% AMI.</h5>
 			<div class="twelve columns" style="margin-top: 2%">
 				<p>Net migration by year (households)				</p>
@@ -291,8 +289,6 @@
 				</script>
 			</div>
 		</div>
-	</div>
-	</div>
 	</div>
 
 	<!-- Divider row -->
