cleaning up outmigration again

--- a/index.html
+++ b/index.html
@@ -270,26 +270,38 @@
 				</p>
 			</div>
 		</div>
+	</div>
+	<div class="container">
 		<div class="row">
-			<h3>Thousands of middle-income households are out-migrating annually.</h3>
-			<h5>Honolulu has lost more migrants than it has gained every year since 2015. Most outgoing households are middle-income, earning between 60% and 140% AMI.</h5>
+			<div class="twelve columns" style="margin-top: 2%">
+				<h3>Thousands of middle-income households are out-migrating annually.</h3>
+				<h5>Honolulu has lost more migrants than it has gained every year since 2015. Most outgoing households are middle-income, earning between 60% and 140% AMI.</h5>				
+			</div>
+		</div>
+
+		<!-- Row with image and text -->
+		<div class="row">
 			<div class="eight columns" style="margin-top: 2%">
-				<h6>Net migration by year (households)				</h6>
 				<iframe title="" aria-label="Column Chart" id="datawrapper-chart-jThFu" src="https://datawrapper.dwcdn.net/jThFu/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="384" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 				</script>
 			</div>
 			<div class="four columns" style="margin-top: 2%">
 				<p>Projections based on past trends suggest relatively low growth in these income groups, especially when compared to households earning above 140%. However, these projections have this out-migration trend baked in and assume they will continue. If these households did not leave the island altogether, they would drive substantial middle-income household growth. 
 					Building more housing that meets these households’ needs and ability to pay could help stem the tide of out-migration.
-				</p>
 			</div>
+		</div>
+
+		<div class="row">
 			<div class="eight columns" style="margin-top: 2%">
-				<h6>Average incomes of out-migrating households (% AMI of that year)				</h6>
 				<iframe title="" aria-label="Interactive line chart" id="datawrapper-chart-JDUUV" src="https://datawrapper.dwcdn.net/JDUUV/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="361" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 				</script>
 			</div>
+			<div class="four columns" style="margin-top: 2%">
+				<p>Caption</p>
+			</div>
 		</div>
 	</div>
+
 
 	<!-- Divider row -->
 	<div class="divider">
