that 80-140 chart and some re-container

--- a/index.html
+++ b/index.html
@@ -301,6 +301,25 @@
 			</div>
 		</div>
 	</div>
+	<div>
+		<div class="container">
+			<div class="row">
+				<div class="twelve columns" style="margin-top: 2%">
+					<h3>More 80-140% AMI housing is needed to retain the workforce.</h3>
+					<h5>With limited resources at the City’s disposal, it is important to match the current cost burden, expected household growth, and rates of out migration with the correct policy response.</h5>				
+				</div>
+			</div>	
+			<div class="row">
+				<div class="eight columns" style="margin-top: 2%">
+					<p><img src="./images/incentivizeworkforce.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
+				</div>
+				<div class="four columns" style="margin-top: 2%">
+					<p>The City has many productive programs in place, including using LIHTC and upzoning in TOD areas (IPD-T) and allowing residential in business districts and enabling ADUs.
+						An adjustment is needed to promote housing for the workforces between 80-140% AMI, which is the predominant segment for out migration. </p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 	<!-- Divider row -->
@@ -326,70 +345,6 @@
 				<p>To meet the changing needs of Honolulu County’s current and future households, Honolulu County needs more housing units of a greater variety than currently exist in most local communities. In general, residents need more compact and efficient units suitable to smaller households that are more likely to include seniors. Options should include both rental and ownership across housing types. </p>
 			</div>
 		</div>
-
-		<div class="row">
-			<div class="nine columns" style="margin-top: 0%">
-				<p>While new units are needed throughout the county, a large share should focus in and around Honolulu County’s downtowns and village centers for walkable proximity to services, amenities, and transit connections. New development should include a variety of housing models that complement the county’s current majority of single-family houses, including:</p>
-				<ul>
-					<li>Tiny houses for singles and couples interested in homeownership without too much space or cost.</li>
-					<li>Cluster developments, which create several houses at once efficiently arranged on sites often setting aside land for open space or preservation.</li>
-					<li>Accessory dwelling units (ADUs), which can be added to existing housing parcels as infill units geared toward renters looking for a compact options in established communities.</li>
-					<li>Duplexes and multifamily units that offer different ownership and rental configurations while increasing density for more efficient housing production.</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-
-	<div class="container">
-		<div class="row">
-			<div class="twelve columns" style="margin-top: 2%">
-				<h3>New construction isn’t the only option.</h3>
-				<h5>There are lots of strategies to retrofit existing housing stock and neighborhoods - here are a few examples.</h5>
-			</div>
-		</div>
-
-		<!-- Row with image and text -->
-		<div class="row">
-			<div class="eight columns" style="margin-top: 2%">
-				<p><img src="./images/retrofits.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>
-			</div>
-			<div class="four columns" style="margin-top: 2%">
-				<p>GIven the high cost of construction and limited availability of development sites in many local communities, housing production should also include retrofitting existing structures.</p>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="nine columns" style="margin-top: 0%">
-				<ul>
-					<li>Adaptive reuse refers to the process of converting a non-residential building into new housing, such as apartments created from a historic schoolhouse or former mill building.
-					<li>Many of the region’s single family houses are too large for most modern households, such as the large victorian homes common in many local neighborhoods. In many cases, these houses can be subdivided into multiple, smaller units that are right-sized to today’s smaller households.</li>
-					<li>Commercial structures in many of the county’s downtowns and village centers include upper floors that could be converted into apartments, offering new units within walking distance of amenities, services, and transit for people who cannot or would rather not rely on a car.</li>
-					<li>As the population ages, existing housing units can be retrofit to ADA accessibility and universal design standards so residents can age in place more comfortably and safely, delaying or foregoing a move to assisted living or other senior housing facility. Energy efficiency and weatherization upgrades can help these residents manage housing costs along the way.</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-
-	<div class="container">
-		<div class="row">
-			<div class="twelve columns" style="margin-top: 2%">
-				<h3>Zoning is a consistent barrier to housing production.</h3>
-				<h5>Restrictive zoning can get in the way of much-needed new housing production but there are many ways to amend local bylaws for greater flexibility.</h5>
-			</div>
-		</div>
-
-		<!-- Row with image and text -->
-		<div class="row">
-			<div class="twelve columns" style="margin-top: 2%;">
-				<p><img src="images/zoningchecklist.jpg" style="width:100%; max-width: 650px; min-width: 50px;"></p>
-			</div>
-			<div class="row">
-				<div class="nine columns" style="margin-top: 0%">
-					<p>Zoning is one of the most powerful ways to regulate housing development. In some Honolulu County communities, current zoning does not allow many of the housing types that would help address today’s housing shortage and affordability challenge. Other communities have amended their zoning over the years to permit a greater variety of housing options and development models in keeping with evolving need and demand. The most immediate and effective way to unlock opportunities for new housing production is to update local zoning codes to enable a wider range of housing types, such as tiny houses, duplexes, multifamily, mixed-use, adaptive reuse, ADUs and other models better aligned with local needs.</p>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<!-- Divider row -->
 	<div class="divider">
