what we want to accomplish

--- a/index.html
+++ b/index.html
@@ -331,12 +331,39 @@
 		</div>
 	</div>
 
+	<div class="container"> 
+		<div class="row">
+			<div class="twelve columns" style="margin-top: 2%">
+				<h3>What we want to accomplish.</h3>
+				<ul>
+					<li>Stem the flow of out-migration driven by Honolulu’s high housing costs and high cost of living. The outmigration threatens to deprive Honolulu of moderate-income households, who are the engine of Oahu’s economy.</li>
+					<li>Increase opportunities for homeownership and homebuyers’ ability to build wealth through homeownership.</li>
+					<li>Ensure the availability of housing for residents across the income spectrum.</li>
+					<li>Align infrastructure investment with housing development plans to make the most effective use of limited infrastructure funding and long implementation timeframes. </li>
+					<li>Recognize the need to balance:
+						<ul>
+							<li>
+								The City’s needs for property tax revenues to sustain vital services (e.g. police, fire, road maintenance, etc.) that benefit the community 
+							</li>
+							<li>
+								The community’s need for affordable housing and 
+							</li>
+							<li>
+								Builders’ need for project feasibility 
+							</li>
+						</ul>
+					</li>
+				</ul>	
+			</div>
+		</div>
+	</div>
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
 				<h3>Capacity map headline.</h3>
 				<h5>Does this map work does it look ok.</h5>
 				<iframe src="https://communityscale.maps.arcgis.com/apps/instant/atlas/index.html?appid=4d180a24d49046a6931eec6e03d225d1" width="1000" height="600" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>		<!-- Row with image and text -->
+		</div>
 		<div class="row">
 			<div class="eight columns" style="margin-top: 2%">
 				<p><img src="./images/solutions.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>
@@ -345,6 +372,7 @@
 				<p>To meet the changing needs of Honolulu County’s current and future households, Honolulu County needs more housing units of a greater variety than currently exist in most local communities. In general, residents need more compact and efficient units suitable to smaller households that are more likely to include seniors. Options should include both rental and ownership across housing types. </p>
 			</div>
 		</div>
+	</div>	
 
 	<!-- Divider row -->
 	<div class="divider">
