added pix and put simple blob and detail blob in their spots

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="nine columns" style="margin-top: 20px">
+			<div class="six columns" style="margin-top: 20px">
 				<p>This dashboard was created by <a href="http://communityscale.io">CommunityScale</a> for the <a href="https://Honolulu.org/project/housing-planning/">County & City of Honolulu</a>. The objective of this dashboard is to outline the plan's objectives and priorities, share key observations and findings about housing, and introduce possible solutions to increase housing production and address affordability challenges.</p>
 				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Full report</button></a></p>
 				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Executive summary</button></a></p>
 			</div>
-			<div class="one-half column" style="margin-top: 20px">
-
+			<div class="six columns" style="margin-top:20px">
+				<p><img src="./images/simpelblob.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
 			</div>
 		</div>
 		<!-- Hide the TOC
@@ -357,6 +357,24 @@
 			</div>
 		</div>
 	</div>
+	<div class="container">
+		<div class="row">
+			<div class="twelve columns" style="margin-top: 2%">
+				<h3>Blob headline</h3>
+				<h5>Blob subhead.</h5>
+				<p><img src="./images/blobdiagram.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
+				<p>More information caption</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="eight columns" style="margin-top: 2%">
+				<p><img src="./images/solutions.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>
+			</div>
+			<div class="four columns" style="margin-top: 2%">
+				<p>To meet the changing needs of Honolulu County’s current and future households, Honolulu County needs more housing units of a greater variety than currently exist in most local communities. In general, residents need more compact and efficient units suitable to smaller households that are more likely to include seniors. Options should include both rental and ownership across housing types. </p>
+			</div>
+		</div>
+	</div>	
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
