cleaning up dividers

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	<div class="divider">
 		<div class="container">
 			<div class="Twelve columns">
-				<h2 id="Overview" class="inline-text"><img src="images/Overview.png" class="inline-image" title="Overview">Overview</h2>
+				<h2 id="Overview">Overview</h2>
 			</div>
 		</div>
 	</div>
@@ -151,7 +151,7 @@
 	<div class="divider">
 		<div class="container">
 			<div class="Twelve columns">
-				<h2 id="Indicators" class="inline-text"><img src="images/Place.png" class="inline-image" title="Indicators">Business-as-usual housing development isn't meeting the needs of Honolulu's existing and growing populations</h2>
+				<h2 id="Indicators">Business-as-usual housing development isn't meeting the needs of Honolulu's existing and growing populations</h2>
 			</div>
 		</div>
 	</div>
@@ -326,7 +326,7 @@
 	<div class="divider">
 		<div class="container">
 			<div class="Twelve columns">
-				<h2 id="Solutions" class="inline-text"><img src="images/Results.png" class="inline-image" title="Solutions">Policy changes are needed to expand housing attainability for households at all income levels.</h2>
+				<h2>Policy changes are needed to expand housing attainability for households at all income levels.</h2>
 			</div>
 		</div>
 	</div>
@@ -357,6 +357,16 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Divider row -->
+	<div class="divider">
+		<div class="container">
+			<div class="Twelve columns">
+				<h2>Housing development should be prioritized within and around TOD areas, with more limited, context-appropriate infill in outlying areas.</h2>
+			</div>
+		</div>
+	</div>
+
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
@@ -364,14 +374,6 @@
 				<h5>Blob subhead.</h5>
 				<p><img src="./images/blobdiagram.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
 				<p>More information caption</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="eight columns" style="margin-top: 2%">
-				<p><img src="./images/solutions.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>
-			</div>
-			<div class="four columns" style="margin-top: 2%">
-				<p>To meet the changing needs of Honolulu County’s current and future households, Honolulu County needs more housing units of a greater variety than currently exist in most local communities. In general, residents need more compact and efficient units suitable to smaller households that are more likely to include seniors. Options should include both rental and ownership across housing types. </p>
 			</div>
 		</div>
 	</div>	
@@ -382,53 +384,8 @@
 				<h5>Does this map work does it look ok.</h5>
 				<iframe src="https://communityscale.maps.arcgis.com/apps/instant/atlas/index.html?appid=4d180a24d49046a6931eec6e03d225d1" width="1000" height="600" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>		<!-- Row with image and text -->
 		</div>
-		<div class="row">
-			<div class="eight columns" style="margin-top: 2%">
-				<p><img src="./images/solutions.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>
-			</div>
-			<div class="four columns" style="margin-top: 2%">
-				<p>To meet the changing needs of Honolulu County’s current and future households, Honolulu County needs more housing units of a greater variety than currently exist in most local communities. In general, residents need more compact and efficient units suitable to smaller households that are more likely to include seniors. Options should include both rental and ownership across housing types. </p>
-			</div>
-		</div>
 	</div>	
 
-	<!-- Divider row -->
-	<div class="divider">
-		<div class="container">
-			<div class="Twelve columns">
-				<h2 id="Next steps" class="inline-text"><img src="images/Demand.png" class="inline-image" title="Next steps">Housing development should be prioritized within and around TOD areas, with more limited, context-appropriate infill in outlying areas.</h2>
-			</div>
-		</div>
-	</div>
-
-	<div class="container">
-		<div class="row">
-			<div class="twelve columns" style="margin-top: 2%">
-				<h3>How can I get involved?</h3>
-				<h5>Some quick and effective ways for local citizens and stakeholders to help advance housing production and affordability: </h5>
-			</div>
-		</div>
-
-		<!-- Row with image and text -->
-		<div class="row">
-			<div class="eight columns" style="margin-top: 2%">
-				<p><img src="./images/next.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>
-			</div>
-			<div class="four  columns" style="margin-top: 2%">
-				<p>Many of the most effective solutions to today’s housing challenges start with new policies at the local level. This requires action and engagement by community members interested in seeing change. To help make a difference, residents should get involved in the policymaking discourse through, for example, joining or contributing to planning boards, advocating at town meetings, participating in local planning activities, and writing letters to lawmakers and newspapers.
-				</p>
-			</div>
-		</div>
-	</div>
-
-	<div class="container">
-		<div class="row">
-			<div class="twelve columns" style="margin-top: 2%">
-				<h3>Contact Honolulu to learn more.</h3>
-				<h5>Reach out to <b>Megan Rhodes, Livability Program Manager</b> at <a href="mailto:mrhodes@Honolulu.org"> mrhodes@Honolulu.org</a> or (413) 774-3167 x132 for the latest details and upcoming activities regarding the Honolulu County Regional Housing Study.</h5>
-			</div>
-		</div>
-	</div>
 
 	<div class="row">
 		<hr>
