cleanup and new map type

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 				</script>
 			</div>
 			<div class="four columns" style="margin-top: 2%">
-				<p>Honolulu’s household population has grown modestly since 2010. In terms of relative income levels, most of the growth has been concentrated among households earning >140% AMI. Looking forward, the fastest growing household income group is >140% AMI, followed by the 80-100% AMI group. The ratio of households below 60% has been decreasing since 2013 and will not result in net new households if trends continue. However, households at lower levels of AMI are cost burdened, and new affordable housing would address that need.					.
+				<p>Honolulu’s household population has grown modestly since 2010. In terms of relative income levels, most of the growth has been concentrated among households earning >140% AMI.
 				</p>
 			</div>
 		</div>
@@ -181,17 +181,17 @@
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h5>Here's a table showing that same information.</h5>
 			</div>
 		</div>
 
 		<!-- Row with image and text -->
 		<div class="row">
 			<div class="eight columns" style="margin-top: 2%">
-				<p>Table</p>
+				<h5>Honolulu’s median income (HUD) 2024: $120,100</h5>
+				<p><img src="./images/amitable.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>
 			</div>
 			<div class="four columns" style="margin-top: 2%">
-				<p>Here's some information about that table.</p>
+				<p>Looking forward, the fastest growing household income group is >140% AMI, followed by the 80-100% AMI group. The ratio of households below 60% has been decreasing since 2013 and will not result in net new households if trends continue. However, households at lower levels of AMI are cost burdened and new affordable housing would address that need as shown in the following pages.</p>
 			</div>
 		</div>
 	</div>
@@ -244,7 +244,8 @@
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
 				<h3>The housing needs of O'ahu's workforce are not being met.</h3>
-				<h5>Jobs are everywhere, job access is important, with some types of jobs more clustered than others.</h5>
+				<h5>Job access is a key consideration in determining where to prioritize housing development.</h5>
+				<p> Each employment sector has its own clusters, though while some sectors are largely concentrated around institutions (such as "eds","meds", and public sector roles), service sector job clusters are more scattered. </p>
 			</div>
 		</div>
 
@@ -255,9 +256,7 @@
 			</div>
 		</div>
 				<div class="row">
-			<div class="twelve columns" style="margin-top: 2%">
-				<p>Caption about the maps.</p>
-			</div>
+
 		</div>
 
 		<div class="row">
@@ -274,8 +273,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h3>Thousands of middle-income households are out-migrating annually.</h3>
-				<h5>Honolulu has lost more migrants than it has gained every year since 2015. Most outgoing households are middle-income, earning between 60% and 140% AMI.</h5>				
+				<h3>Thousands of middle-income households are out-migrating annually.</h3>	
 			</div>
 		</div>
 
@@ -286,8 +284,7 @@
 				</script>
 			</div>
 			<div class="four columns" style="margin-top: 2%">
-				<p>Projections based on past trends suggest relatively low growth in these income groups, especially when compared to households earning above 140%. However, these projections have this out-migration trend baked in and assume they will continue. If these households did not leave the island altogether, they would drive substantial middle-income household growth. 
-					Building more housing that meets these households’ needs and ability to pay could help stem the tide of out-migration.
+				<p>Honolulu has lost more migrants than it has gained every year since 2015.</p>
 			</div>
 		</div>
 
@@ -297,7 +294,9 @@
 				</script>
 			</div>
 			<div class="four columns" style="margin-top: 2%">
-				<p>Caption</p>
+				<p>Most outgoing households are middle-income, earning between 60% and 140% AMI.Projections based on past trends suggest relatively low growth in these income groups, especially when compared to households earning above 140%. However, these projections have this out-migration trend baked in and assume they will continue. If these households did not leave the island altogether, they would drive substantial middle-income household growth. 
+					Building more housing that meets these households’ needs and ability to pay could help stem the tide of out-migration.
+				</p>
 			</div>
 		</div>
 	</div>
@@ -306,14 +305,14 @@
 			<div class="row">
 				<div class="twelve columns" style="margin-top: 2%">
 					<h3>More 80-140% AMI housing is needed to retain the workforce.</h3>
-					<h5>With limited resources at the City’s disposal, it is important to match the current cost burden, expected household growth, and rates of out migration with the correct policy response.</h5>				
+					<h5>With limited resources at the City’s disposal, it is important to match the current cost burden, expected household growth, and rates of out migration with the correct policy response.</h5>		
 				</div>
 			</div>	
 			<div class="row">
-				<div class="eight columns" style="margin-top: 2%">
+				<div class="six columns" style="margin-top: 2%">
 					<p><img src="./images/incentivizeworkforce.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
 				</div>
-				<div class="four columns" style="margin-top: 2%">
+				<div class="six columns" style="margin-top: 2%">
 					<p>The City has many productive programs in place, including using LIHTC and upzoning in TOD areas (IPD-T) and allowing residential in business districts and enabling ADUs.
 						An adjustment is needed to promote housing for the workforces between 80-140% AMI, which is the predominant segment for out migration. </p>
 				</div>
@@ -358,6 +357,16 @@
 		</div>
 	</div>
 
+	<div class="container">
+		<div class="row">
+			<div class="twelve columns" style="margin-top: 2%">
+				<h3>The 5-year strategy will expand housing availability for all income levels.
+				</h3>
+				<p><img src="./images/sankey.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
+			</div>
+		</div>
+	</div>
+
 	<!-- Divider row -->
 	<div class="divider">
 		<div class="container">
@@ -370,20 +379,43 @@
 	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h3>Blob headline</h3>
-				<h5>Blob subhead.</h5>
+				<h3>78% of housing production is recommended to be contained in the three sustainable plan areas with light-rail access.</h3>
+				<h5>Housing development should be concentrated within TOD areas.</h5>
 				<p><img src="./images/blobdiagram.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
-				<p>More information caption</p>
+				<p>78% of the 5-year growth is allocated to the three sustainable area plans containing the transit-oriented development areas, while the remaining 22% is allocated to the more rural sustainable communities with an eye of smaller scale infill housing, retrofits and replacement, and supporting the workforce. 
+					<ul>
+						<li>TOD areas: Housing production is focused around new neighborhoods in Ewa and TOD Council’s infrastructure investments at East Kapolei, Stadium / Halawa, and Iwilei Center. </li>
+						<li>Non-TOD sustainable communities: These communities currently have 23% of the overall housing, so the allocation is geared slightly towards the transit areas. Zoning changes that allow ADUs and infill housing within existing business districts provide sufficient capacity to meet these region’s housing production targets while also achieving their Sustainable Community Plan goals.</li>
+					</ul>
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="eight columns" style="margin-top: 2%">
+				<h5>Regional housing allocation</h5>
+				<p><img src="./images/allocationtable.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
 			</div>
 		</div>
 	</div>	
 	<div class="container">
+		<div class="twelve columns" style="margin-top: 2%">
+			<h3>The current lack of density around transit stations represents a significant opportunity for achieving the community’s housing goals.</h3>
+		</div>
+		<div class="row">
+			<div class="eight columns" style="margin-top: 2%">
+				<p><img src="./images/toddensitymap.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
+			</div>
+			<div class="four columns" style="margin-top: 2%">
+				<p>The station areas include over 9 square miles of parcels within ½ mile, currently home to 32,064 units. The State’s TOD Council is currently focusing housing-supportive infrastructure efforts at:
+					East Kapolei (1,000 units), Stadium / Halawa (2,000 units), and Iwilei Center (27,500 units). </p>
+			</div>
+		</div>
+	</div>
+	<div class="container">
 		<div class="row">
 			<div class="twelve columns" style="margin-top: 2%">
-				<h3>Capacity map headline.</h3>
-				<h5>Does this map work does it look ok.</h5>
-				<iframe src="https://communityscale.maps.arcgis.com/apps/instant/atlas/index.html?appid=4d180a24d49046a6931eec6e03d225d1" width="1000" height="600" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>		<!-- Row with image and text -->
-		</div>
+				<h5>Use the map below to explore opportunities for added housing capacity.</h5>
+				<style>.embed-container {position: relative; padding-bottom: 40%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="1000" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Honolulu capacity - v1" src="//communityscale.maps.arcgis.com/apps/Embed/index.html?webmap=4adda232d3f74b0f9fc181501d05192b&extent=-158.0915,21.287,-157.6898,21.5168&zoom=true&previewImage=false&scale=true&legendlayers=true&show_panel=true&disable_scroll=true&theme=light"></iframe></div>		</div>
 	</div>	
 
 
