clean up allocation table

--- a/index.html
+++ b/index.html
@@ -383,10 +383,6 @@
 				<h5>Housing development should be concentrated within TOD areas.</h5>
 				<p><img src="./images/blobdiagram.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
 				<p>78% of the 5-year growth is allocated to the three sustainable area plans containing the transit-oriented development areas, while the remaining 22% is allocated to the more rural sustainable communities with an eye of smaller scale infill housing, retrofits and replacement, and supporting the workforce. 
-					<ul>
-						<li>TOD areas: Housing production is focused around new neighborhoods in Ewa and TOD Council’s infrastructure investments at East Kapolei, Stadium / Halawa, and Iwilei Center. </li>
-						<li>Non-TOD sustainable communities: These communities currently have 23% of the overall housing, so the allocation is geared slightly towards the transit areas. Zoning changes that allow ADUs and infill housing within existing business districts provide sufficient capacity to meet these region’s housing production targets while also achieving their Sustainable Community Plan goals.</li>
-					</ul>
 				</p>
 			</div>
 		</div>
@@ -394,6 +390,10 @@
 			<div class="eight columns" style="margin-top: 2%">
 				<h5>Regional housing allocation</h5>
 				<p><img src="./images/allocationtable.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
+			</div>
+			<div class="four columns" style="margin-top: 2%">
+				<p>TOD areas: Housing production is focused around new neighborhoods in Ewa and TOD Council’s infrastructure investments at East Kapolei, Stadium / Halawa, and Iwilei Center. </p>
+				<p>Non-TOD sustainable communities: These communities currently have 23% of the overall housing, so the allocation is geared slightly towards the transit areas. Zoning changes that allow ADUs and infill housing within existing business districts provide sufficient capacity to meet these region’s housing production targets while also achieving their Sustainable Community Plan goals.</p>
 			</div>
 		</div>
 	</div>	
