--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 		<!-- Row with image and text -->
 		<div class="row">
 			<div class="eight columns" style="margin-top: 2%">
-				<iframe title="" aria-label="Stacked Bars" id="datawrapper-chart-JRpJu" src="https://datawrapper.dwcdn.net/JRpJu/1/" scrolling="no" frameborder="0" style="border: none;" width="700" height="294" data-external="1"></iframe>
+				<iframe title="" aria-label="Stacked Bars" id="datawrapper-chart-JRpJu" src="https://datawrapper.dwcdn.net/JRpJu/1/" scrolling="no" frameborder="0" style="border: none;" width="100%" height="294" data-external="1"></iframe>
 				<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();</script>
 			</div>
 			<div class="four columns" style="margin-top: 2%">
@@ -262,7 +262,7 @@
 		<div class="row">
 			<h5>Many essential workers fall within the 80-140% AMI group and need housing affordable at those income levels.</h5>
 			<div class="twelve columns" style="margin-top: 2%">
-				<iframe title="" aria-label="Range Plot" id="datawrapper-chart-TDGRK" src="https://datawrapper.dwcdn.net/TDGRK/5/" scrolling="no" frameborder="0" style="border: none;" width="998" height="348" data-external="1"></iframe>
+				<iframe title="" aria-label="Range Plot" id="datawrapper-chart-TDGRK" src="https://datawrapper.dwcdn.net/TDGRK/5/" scrolling="no" frameborder="0" style="border: none;" width="100%" height="348" data-external="1"></iframe>
 			</div>
 			<div class="twelve columns" style="margin-top: 2%">
 				<p>The essential workforce is typically within the 60-140% AMI range depending on whether there are one or two income earners in the household. This group is both strained enough by housing costs and mobile enough to leave the island for a lower cost of living. According to IRS data, the average income of Oahu’s approx. 4,000 annual outmigrant households is between 65% and 130% AMI.
