household sinstead of migrants

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 				</script>
 			</div>
 			<div class="four columns" style="margin-top: 2%">
-				<p>Honolulu has lost more migrants than it has gained every year since 2015.</p>
+				<p>Honolulu has lost more households to outmigration than it has gained to inmigration every year since 2015.</p>
 			</div>
 		</div>
 
