--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 				<p>This dashboard was created by <a href="http://communityscale.io">CommunityScale</a> for the <a href="https://Honolulu.org/project/housing-planning/">County & City of Honolulu</a>. The objective of this dashboard is to outline the plan's objectives and priorities, share key observations and findings about housing, and introduce possible solutions to increase housing production and address affordability challenges.</p>
 				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Full report</button></a></p>
 				<p><a href="https://docs.google.com/presentation/d/1zOwF__ln05HebGP25b3iRVvzgEcWyS5bUvugsnZ1Z2E/edit?usp=sharing" target="blank"><button>Executive summary</button></a></p>
+				<p><button>Add a button for each section of the report...</button></p>
 			</div>
 			<div class="six columns" style="margin-top:20px">
 				<p><img src="./images/simpelblob.png" height=auto width=100% title="CommunityScale" alt="CommunityScale"></a></p>	
